// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloseWorkOrderForm component - when follow-on functionality is enabled should not render startDate or startTime 1`] = `
<DocumentFragment>
  <div
    class="close-work-order-form"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
    <h1
      class="lbh-heading-h2"
    >
      Close work order: 10000012
    </h1>
    <form
      role="form"
    >
      <div
        class="govuk-form-group lbh-form-group"
      >
        <legend
          class="govuk-fieldset__legend govuk-fieldset__legend--s"
        >
          Reason for closing 
        </legend>
        <span
          class="govuk-hint lbh-hint"
          id="reason-hint"
        />
        <div
          class="govuk-radios lbh-radios"
        >
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              data-testid="reason"
              id="reason_Work Order Completed"
              name="reason"
              type="radio"
              value="Work Order Completed"
            />
            <label
              class="govuk-label lbh-label govuk-radios__label"
              for="reason_Work Order Completed"
            >
              Visit completed
            </label>
          </div>
          <div
            class="govuk-radios__conditional"
            id="conditional-contact"
          />
          <div
            class="govuk-radios__item"
          >
            <input
              checked=""
              class="govuk-radios__input"
              data-testid="reason"
              id="reason_No Access"
              name="reason"
              type="radio"
              value="No Access"
            />
            <label
              class="govuk-label lbh-label govuk-radios__label"
              for="reason_No Access"
            >
              No access
            </label>
          </div>
        </div>
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <div>
          <legend
            class="govuk-fieldset__legend govuk-fieldset__legend--s"
            id="fileUploadLegend"
          >
            Photos
          </legend>
          <span
            class="govuk-hint lbh-hint"
            id="photos-hint"
          >
            Select all the photos you want to add (up to 10 photos)
          </span>
          <input
            accept=".jpg, .jpeg, .png"
            aria-labelledby="fileUploadLegend"
            class="govuk-file-upload custom-file-input"
            data-testid="PhotoUploadForm"
            id="fileUpload"
            multiple=""
            name="fileUpload"
            style="margin-top: 10px;"
            type="file"
          />
          <div
            class="photoUploadPreview"
          />
        </div>
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <label
          class="govuk-label lbh-label govuk-label--m"
          for="completionDate"
        >
          Select completion date 
        </label>
        <span
          class="govuk-hint lbh-hint"
          id="completionDate-hint"
        >
          For example, 15/05/2021
        </span>
        <input
          class="govuk-input govuk-input--width-10"
          data-testid="completionDate"
          id="completionDate"
          name="completionDate"
          type="date"
          value="2021-01-12"
        />
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <fieldset
          aria-describedby="completionTime-hint"
          class="govuk-fieldset lbh-fieldset"
          role="group"
        >
          <legend
            class="govuk-fieldset__legend govuk-fieldset__legend--s"
          >
            Completion time 
          </legend>
          <span
            class="govuk-hint lbh-hint"
            id="completionTime-hint"
          >
            Use 24h format. For example, 14:30
          </span>
          <div
            class="govuk-date-input lbh-date-input"
            id="completionTime"
          >
            <div
              class="govuk-date-input__item"
            >
              <label
                class="govuk-label lbh-label govuk-date-input__label"
                for="completionTime-hour"
              >
                Hour
              </label>
              <input
                class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
                data-testid="completionTime-hour"
                id="completionTime-hour"
                inputmode="numeric"
                name="completionTime-hour"
                pattern="^\\\\d{1,2}$"
                type="text"
                value="14"
              />
            </div>
            <div
              class="govuk-date-input__item"
            >
              <label
                class="govuk-label lbh-label govuk-date-input__label"
                for="completionTime-minutes"
              >
                Minutes
              </label>
              <input
                class="govuk-input govuk-date-input__input govuk-input--width-2"
                data-testid="completionTime-minutes"
                id="completionTime-minutes"
                inputmode="numeric"
                name="completionTime-minutes"
                pattern="^\\\\d{1,2}$"
                type="text"
                value="30"
              />
            </div>
          </div>
        </fieldset>
      </div>
      <fieldset
        aria-describedby="completionTime-hint"
        class="govuk-fieldset lbh-fieldset"
        role="group"
      >
        <div
          class="operatives govuk-form-group"
        >
          <legend
            class="govuk-fieldset__legend govuk-fieldset__legend--s"
          >
            Operatives
          </legend>
          <span
            class="govuk-hint lbh-hint"
            id="completionTime-hint"
          >
            Search by operative name and select from the list
          </span>
          <div
            class="operatives-group"
          >
            <div
              class="govuk-form-group lbh-form-group operative-datalist"
              id="operative-0-form-group"
            >
              <label
                class="govuk-label lbh-label"
                for="operative-0"
              >
                Operative name 1 *  
              </label>
              <input
                autocomplete="off"
                class="govuk-select lbh-select govuk-!-width-full"
                data-testid="operative-0"
                id="operative-0"
                list="autocomplete-list-operative-0"
                name="operative-0"
                value="Operative A [1]"
              />
              <datalist
                id="autocomplete-list-operative-0"
              >
                <option
                  value="Operative A [1]"
                />
                <option
                  value="Operative B [2]"
                />
              </datalist>
            </div>
            <div
              class="select-percentage"
            >
              <div
                class="govuk-form-group lbh-form-group"
                id="percentage-0-form-group"
              >
                <label
                  class="govuk-label lbh-label"
                  for="percentage-0"
                >
                  Work done 
                </label>
                <select
                  class="govuk-select lbh-select undefined"
                  data-testid="percentage-0"
                  id="percentage-0"
                  name="percentage-0"
                >
                  <option
                    value=""
                  />
                  <option
                    value="100%"
                  >
                    100%
                  </option>
                  <option
                    value="90%"
                  >
                    90%
                  </option>
                  <option
                    value="80%"
                  >
                    80%
                  </option>
                  <option
                    value="70%"
                  >
                    70%
                  </option>
                  <option
                    value="60%"
                  >
                    60%
                  </option>
                  <option
                    value="50%"
                  >
                    50%
                  </option>
                  <option
                    value="40%"
                  >
                    40%
                  </option>
                  <option
                    value="30%"
                  >
                    30%
                  </option>
                  <option
                    value="20%"
                  >
                    20%
                  </option>
                  <option
                    value="10%"
                  >
                    10%
                  </option>
                  <option
                    value="-"
                  >
                    -
                  </option>
                </select>
              </div>
            </div>
            <div
              class="smv-read-only"
            >
              <p
                class="lbh-body smv-read-only--label"
              >
                SMV
              </p>
              <p
                class="lbh-body smv-read-only--value"
              >
                38
              </p>
            </div>
          </div>
          <div
            class="operatives-group"
          >
            <div
              class="govuk-form-group lbh-form-group operative-datalist"
              id="operative-1-form-group"
            >
              <label
                class="govuk-label lbh-label"
                for="operative-1"
              >
                Operative name 2 *  
              </label>
              <input
                autocomplete="off"
                class="govuk-select lbh-select govuk-!-width-full"
                data-testid="operative-1"
                id="operative-1"
                list="autocomplete-list-operative-1"
                name="operative-1"
                value="Operative B [2]"
              />
              <datalist
                id="autocomplete-list-operative-1"
              >
                <option
                  value="Operative A [1]"
                />
                <option
                  value="Operative B [2]"
                />
              </datalist>
            </div>
            <div
              class="select-percentage"
            >
              <div
                class="govuk-form-group lbh-form-group"
                id="percentage-1-form-group"
              >
                <label
                  class="govuk-label lbh-label"
                  for="percentage-1"
                >
                  Work done 
                </label>
                <select
                  class="govuk-select lbh-select undefined"
                  data-testid="percentage-1"
                  id="percentage-1"
                  name="percentage-1"
                >
                  <option
                    value=""
                  />
                  <option
                    value="100%"
                  >
                    100%
                  </option>
                  <option
                    value="90%"
                  >
                    90%
                  </option>
                  <option
                    value="80%"
                  >
                    80%
                  </option>
                  <option
                    value="70%"
                  >
                    70%
                  </option>
                  <option
                    value="60%"
                  >
                    60%
                  </option>
                  <option
                    value="50%"
                  >
                    50%
                  </option>
                  <option
                    value="40%"
                  >
                    40%
                  </option>
                  <option
                    value="30%"
                  >
                    30%
                  </option>
                  <option
                    value="20%"
                  >
                    20%
                  </option>
                  <option
                    value="10%"
                  >
                    10%
                  </option>
                  <option
                    value="-"
                  >
                    -
                  </option>
                </select>
              </div>
            </div>
            <div
              class="smv-read-only"
            >
              <p
                class="lbh-body smv-read-only--label"
              >
                SMV
              </p>
              <p
                class="lbh-body smv-read-only--value"
              >
                38
              </p>
            </div>
          </div>
          <div>
            <a
              class="lbh-link"
              href="#"
            >
              + Add operative
            </a>
          </div>
          <div>
            <a
              class="lbh-link"
              href="#"
            >
              - Remove last operative
            </a>
          </div>
        </div>
      </fieldset>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <legend
          class="govuk-fieldset__legend govuk-fieldset__legend--s"
        >
          Payment type 
        </legend>
        <span
          class="govuk-hint lbh-hint"
          id="paymentType-hint"
        />
        <div
          class="govuk-radios lbh-radios"
        >
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              data-testid="paymentType"
              id="paymentType_Bonus"
              name="paymentType"
              type="radio"
              value="Bonus"
            />
            <label
              class="govuk-label lbh-label govuk-radios__label"
              for="paymentType_Bonus"
            >
              Bonus calculation
            </label>
          </div>
          <div
            class="govuk-radios__item"
          >
            <input
              aria-describedby="paymentType-overtime-hint"
              checked=""
              class="govuk-radios__input"
              data-testid="paymentType"
              id="paymentType_Overtime"
              name="paymentType"
              type="radio"
              value="Overtime"
            />
            <label
              class="govuk-label lbh-label govuk-radios__label"
              for="paymentType_Overtime"
            >
              Overtime work order
            </label>
            <span
              class="govuk-hint govuk-radios__hint"
              id="paymentType-overtime-hint"
            >
              SMVs not included in Bonus
            </span>
          </div>
          <div
            class="govuk-radios__item"
          >
            <input
              aria-describedby="paymentType-closetobase-hint"
              class="govuk-radios__input"
              data-testid="paymentType"
              id="paymentType_CloseToBase"
              name="paymentType"
              type="radio"
              value="CloseToBase"
            />
            <label
              class="govuk-label lbh-label govuk-radios__label"
              for="paymentType_CloseToBase"
            >
              Close to base
            </label>
            <span
              class="govuk-hint govuk-radios__hint"
              id="paymentType-closetobase-hint"
            >
              Operative payment made
            </span>
          </div>
        </div>
      </div>
      <div
        class="govuk-form-group lbh-form-group"
        id="notes-form-group"
      >
        <label
          class="govuk-label lbh-label"
          for="notes"
        >
          Add notes
        </label>
        <textarea
          aria-describedby="notes-hint notes-error"
          class="govuk-textarea lbh-textarea"
          data-testid="notes"
          id="notes"
          name="notes"
          rows="4"
        >
          this is a note
        </textarea>
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <button
          class="govuk-button lbh-button"
          data-module="govuk-button"
          id="submit-work-order-close"
          type="submit"
        >
          Close work order
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`CloseWorkOrderForm component - when follow-on functionality is enabled should render properly 1`] = `
<DocumentFragment>
  <div
    class="close-work-order-form"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
    <h1
      class="lbh-heading-h2"
    >
      Close work order: 10000012
    </h1>
    <form
      role="form"
    >
      <div
        class="govuk-form-group lbh-form-group"
      >
        <legend
          class="govuk-fieldset__legend govuk-fieldset__legend--s"
        >
          Reason for closing 
        </legend>
        <span
          class="govuk-hint lbh-hint"
          id="reason-hint"
        />
        <div
          class="govuk-radios lbh-radios"
        >
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              data-testid="reason"
              id="reason_Work Order Completed"
              name="reason"
              type="radio"
              value="Work Order Completed"
            />
            <label
              class="govuk-label lbh-label govuk-radios__label"
              for="reason_Work Order Completed"
            >
              Visit completed
            </label>
          </div>
          <div
            class="govuk-radios__conditional"
            id="conditional-contact"
          />
          <div
            class="govuk-radios__item"
          >
            <input
              checked=""
              class="govuk-radios__input"
              data-testid="reason"
              id="reason_No Access"
              name="reason"
              type="radio"
              value="No Access"
            />
            <label
              class="govuk-label lbh-label govuk-radios__label"
              for="reason_No Access"
            >
              No access
            </label>
          </div>
        </div>
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <div>
          <legend
            class="govuk-fieldset__legend govuk-fieldset__legend--s"
            id="fileUploadLegend"
          >
            Photos
          </legend>
          <span
            class="govuk-hint lbh-hint"
            id="photos-hint"
          >
            Select all the photos you want to add (up to 10 photos)
          </span>
          <input
            accept=".jpg, .jpeg, .png"
            aria-labelledby="fileUploadLegend"
            class="govuk-file-upload custom-file-input"
            data-testid="PhotoUploadForm"
            id="fileUpload"
            multiple=""
            name="fileUpload"
            style="margin-top: 10px;"
            type="file"
          />
          <div
            class="photoUploadPreview"
          />
        </div>
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <label
          class="govuk-label lbh-label govuk-label--m"
          for="startDate"
        >
          Select start date (optional) 
        </label>
        <span
          class="govuk-hint lbh-hint"
          id="startDate-hint"
        >
          For example, 15/05/2021
        </span>
        <input
          class="govuk-input govuk-input--width-10"
          data-testid="startDate"
          id="startDate"
          name="startDate"
          type="date"
          value="2021-01-12"
        />
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <fieldset
          aria-describedby="startTime-hint"
          class="govuk-fieldset lbh-fieldset"
          role="group"
        >
          <legend
            class="govuk-fieldset__legend govuk-fieldset__legend--s"
          >
            Start time (optional) 
          </legend>
          <span
            class="govuk-hint lbh-hint"
            id="startTime-hint"
          >
            Use 24h format. For example, 14:30
          </span>
          <div
            class="govuk-date-input lbh-date-input"
            id="startTime"
          >
            <div
              class="govuk-date-input__item"
            >
              <label
                class="govuk-label lbh-label govuk-date-input__label"
                for="startTime-hour"
              >
                Hour
              </label>
              <input
                class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
                data-testid="startTime-hour"
                id="startTime-hour"
                inputmode="numeric"
                name="startTime-hour"
                pattern="^\\\\d{1,2}$"
                type="text"
                value="14"
              />
            </div>
            <div
              class="govuk-date-input__item"
            >
              <label
                class="govuk-label lbh-label govuk-date-input__label"
                for="startTime-minutes"
              >
                Minutes
              </label>
              <input
                class="govuk-input govuk-date-input__input govuk-input--width-2"
                data-testid="startTime-minutes"
                id="startTime-minutes"
                inputmode="numeric"
                name="startTime-minutes"
                pattern="^\\\\d{1,2}$"
                type="text"
                value="30"
              />
            </div>
          </div>
        </fieldset>
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <label
          class="govuk-label lbh-label govuk-label--m"
          for="completionDate"
        >
          Select completion date 
        </label>
        <span
          class="govuk-hint lbh-hint"
          id="completionDate-hint"
        >
          For example, 15/05/2021
        </span>
        <input
          class="govuk-input govuk-input--width-10"
          data-testid="completionDate"
          id="completionDate"
          name="completionDate"
          type="date"
          value="2021-01-12"
        />
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <fieldset
          aria-describedby="completionTime-hint"
          class="govuk-fieldset lbh-fieldset"
          role="group"
        >
          <legend
            class="govuk-fieldset__legend govuk-fieldset__legend--s"
          >
            Completion time 
          </legend>
          <span
            class="govuk-hint lbh-hint"
            id="completionTime-hint"
          >
            Use 24h format. For example, 14:30
          </span>
          <div
            class="govuk-date-input lbh-date-input"
            id="completionTime"
          >
            <div
              class="govuk-date-input__item"
            >
              <label
                class="govuk-label lbh-label govuk-date-input__label"
                for="completionTime-hour"
              >
                Hour
              </label>
              <input
                class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
                data-testid="completionTime-hour"
                id="completionTime-hour"
                inputmode="numeric"
                name="completionTime-hour"
                pattern="^\\\\d{1,2}$"
                type="text"
                value="14"
              />
            </div>
            <div
              class="govuk-date-input__item"
            >
              <label
                class="govuk-label lbh-label govuk-date-input__label"
                for="completionTime-minutes"
              >
                Minutes
              </label>
              <input
                class="govuk-input govuk-date-input__input govuk-input--width-2"
                data-testid="completionTime-minutes"
                id="completionTime-minutes"
                inputmode="numeric"
                name="completionTime-minutes"
                pattern="^\\\\d{1,2}$"
                type="text"
                value="30"
              />
            </div>
          </div>
        </fieldset>
      </div>
      <fieldset
        aria-describedby="completionTime-hint"
        class="govuk-fieldset lbh-fieldset"
        role="group"
      >
        <div
          class="operatives govuk-form-group"
        >
          <legend
            class="govuk-fieldset__legend govuk-fieldset__legend--s"
          >
            Operatives
          </legend>
          <span
            class="govuk-hint lbh-hint"
            id="completionTime-hint"
          >
            Search by operative name and select from the list
          </span>
          <div
            class="operatives-group"
          >
            <div
              class="govuk-form-group lbh-form-group operative-datalist"
              id="operative-0-form-group"
            >
              <label
                class="govuk-label lbh-label"
                for="operative-0"
              >
                Operative name 1 *  
              </label>
              <input
                autocomplete="off"
                class="govuk-select lbh-select govuk-!-width-full"
                data-testid="operative-0"
                id="operative-0"
                list="autocomplete-list-operative-0"
                name="operative-0"
                value="Operative A [1]"
              />
              <datalist
                id="autocomplete-list-operative-0"
              >
                <option
                  value="Operative A [1]"
                />
                <option
                  value="Operative B [2]"
                />
              </datalist>
            </div>
            <div
              class="select-percentage"
            >
              <div
                class="govuk-form-group lbh-form-group"
                id="percentage-0-form-group"
              >
                <label
                  class="govuk-label lbh-label"
                  for="percentage-0"
                >
                  Work done 
                </label>
                <select
                  class="govuk-select lbh-select undefined"
                  data-testid="percentage-0"
                  id="percentage-0"
                  name="percentage-0"
                >
                  <option
                    value=""
                  />
                  <option
                    value="100%"
                  >
                    100%
                  </option>
                  <option
                    value="90%"
                  >
                    90%
                  </option>
                  <option
                    value="80%"
                  >
                    80%
                  </option>
                  <option
                    value="70%"
                  >
                    70%
                  </option>
                  <option
                    value="60%"
                  >
                    60%
                  </option>
                  <option
                    value="50%"
                  >
                    50%
                  </option>
                  <option
                    value="40%"
                  >
                    40%
                  </option>
                  <option
                    value="30%"
                  >
                    30%
                  </option>
                  <option
                    value="20%"
                  >
                    20%
                  </option>
                  <option
                    value="10%"
                  >
                    10%
                  </option>
                  <option
                    value="-"
                  >
                    -
                  </option>
                </select>
              </div>
            </div>
            <div
              class="smv-read-only"
            >
              <p
                class="lbh-body smv-read-only--label"
              >
                SMV
              </p>
              <p
                class="lbh-body smv-read-only--value"
              >
                38
              </p>
            </div>
          </div>
          <div
            class="operatives-group"
          >
            <div
              class="govuk-form-group lbh-form-group operative-datalist"
              id="operative-1-form-group"
            >
              <label
                class="govuk-label lbh-label"
                for="operative-1"
              >
                Operative name 2 *  
              </label>
              <input
                autocomplete="off"
                class="govuk-select lbh-select govuk-!-width-full"
                data-testid="operative-1"
                id="operative-1"
                list="autocomplete-list-operative-1"
                name="operative-1"
                value="Operative B [2]"
              />
              <datalist
                id="autocomplete-list-operative-1"
              >
                <option
                  value="Operative A [1]"
                />
                <option
                  value="Operative B [2]"
                />
              </datalist>
            </div>
            <div
              class="select-percentage"
            >
              <div
                class="govuk-form-group lbh-form-group"
                id="percentage-1-form-group"
              >
                <label
                  class="govuk-label lbh-label"
                  for="percentage-1"
                >
                  Work done 
                </label>
                <select
                  class="govuk-select lbh-select undefined"
                  data-testid="percentage-1"
                  id="percentage-1"
                  name="percentage-1"
                >
                  <option
                    value=""
                  />
                  <option
                    value="100%"
                  >
                    100%
                  </option>
                  <option
                    value="90%"
                  >
                    90%
                  </option>
                  <option
                    value="80%"
                  >
                    80%
                  </option>
                  <option
                    value="70%"
                  >
                    70%
                  </option>
                  <option
                    value="60%"
                  >
                    60%
                  </option>
                  <option
                    value="50%"
                  >
                    50%
                  </option>
                  <option
                    value="40%"
                  >
                    40%
                  </option>
                  <option
                    value="30%"
                  >
                    30%
                  </option>
                  <option
                    value="20%"
                  >
                    20%
                  </option>
                  <option
                    value="10%"
                  >
                    10%
                  </option>
                  <option
                    value="-"
                  >
                    -
                  </option>
                </select>
              </div>
            </div>
            <div
              class="smv-read-only"
            >
              <p
                class="lbh-body smv-read-only--label"
              >
                SMV
              </p>
              <p
                class="lbh-body smv-read-only--value"
              >
                38
              </p>
            </div>
          </div>
          <div>
            <a
              class="lbh-link"
              href="#"
            >
              + Add operative
            </a>
          </div>
          <div>
            <a
              class="lbh-link"
              href="#"
            >
              - Remove last operative
            </a>
          </div>
        </div>
      </fieldset>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <legend
          class="govuk-fieldset__legend govuk-fieldset__legend--s"
        >
          Payment type 
        </legend>
        <span
          class="govuk-hint lbh-hint"
          id="paymentType-hint"
        />
        <div
          class="govuk-radios lbh-radios"
        >
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              data-testid="paymentType"
              id="paymentType_Bonus"
              name="paymentType"
              type="radio"
              value="Bonus"
            />
            <label
              class="govuk-label lbh-label govuk-radios__label"
              for="paymentType_Bonus"
            >
              Bonus calculation
            </label>
          </div>
          <div
            class="govuk-radios__item"
          >
            <input
              aria-describedby="paymentType-overtime-hint"
              checked=""
              class="govuk-radios__input"
              data-testid="paymentType"
              id="paymentType_Overtime"
              name="paymentType"
              type="radio"
              value="Overtime"
            />
            <label
              class="govuk-label lbh-label govuk-radios__label"
              for="paymentType_Overtime"
            >
              Overtime work order
            </label>
            <span
              class="govuk-hint govuk-radios__hint"
              id="paymentType-overtime-hint"
            >
              SMVs not included in Bonus
            </span>
          </div>
          <div
            class="govuk-radios__item"
          >
            <input
              aria-describedby="paymentType-closetobase-hint"
              class="govuk-radios__input"
              data-testid="paymentType"
              id="paymentType_CloseToBase"
              name="paymentType"
              type="radio"
              value="CloseToBase"
            />
            <label
              class="govuk-label lbh-label govuk-radios__label"
              for="paymentType_CloseToBase"
            >
              Close to base
            </label>
            <span
              class="govuk-hint govuk-radios__hint"
              id="paymentType-closetobase-hint"
            >
              Operative payment made
            </span>
          </div>
        </div>
      </div>
      <div
        class="govuk-form-group lbh-form-group"
        id="notes-form-group"
      >
        <label
          class="govuk-label lbh-label"
          for="notes"
        >
          Add notes
        </label>
        <textarea
          aria-describedby="notes-hint notes-error"
          class="govuk-textarea lbh-textarea"
          data-testid="notes"
          id="notes"
          name="notes"
          rows="4"
        >
          this is a note
        </textarea>
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <button
          class="govuk-button lbh-button"
          data-module="govuk-button"
          id="submit-work-order-close"
          type="submit"
        >
          Close work order
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`CloseWorkOrderForm component should not render startDate or startTime 1`] = `
<DocumentFragment>
  <div
    class="close-work-order-form"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
    <h1
      class="lbh-heading-h2"
    >
      Close work order: 10000012
    </h1>
    <form
      role="form"
    >
      <div
        class="govuk-form-group lbh-form-group"
      >
        <legend
          class="govuk-fieldset__legend govuk-fieldset__legend--s"
        >
          Reason for closing 
        </legend>
        <span
          class="govuk-hint lbh-hint"
          id="reason-hint"
        />
        <div
          class="govuk-radios lbh-radios"
        >
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              data-testid="reason"
              id="reason_Work Order Completed"
              name="reason"
              type="radio"
              value="Work Order Completed"
            />
            <label
              class="govuk-label lbh-label govuk-radios__label"
              for="reason_Work Order Completed"
            >
              Visit completed
            </label>
          </div>
          <div
            class="govuk-radios__conditional"
            id="conditional-contact"
          />
          <div
            class="govuk-radios__item"
          >
            <input
              checked=""
              class="govuk-radios__input"
              data-testid="reason"
              id="reason_No Access"
              name="reason"
              type="radio"
              value="No Access"
            />
            <label
              class="govuk-label lbh-label govuk-radios__label"
              for="reason_No Access"
            >
              No access
            </label>
          </div>
        </div>
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <div>
          <legend
            class="govuk-fieldset__legend govuk-fieldset__legend--s"
            id="fileUploadLegend"
          >
            Photos
          </legend>
          <span
            class="govuk-hint lbh-hint"
            id="photos-hint"
          >
            Select all the photos you want to add (up to 10 photos)
          </span>
          <input
            accept=".jpg, .jpeg, .png"
            aria-labelledby="fileUploadLegend"
            class="govuk-file-upload custom-file-input"
            data-testid="PhotoUploadForm"
            id="fileUpload"
            multiple=""
            name="fileUpload"
            style="margin-top: 10px;"
            type="file"
          />
          <div
            class="photoUploadPreview"
          />
        </div>
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <label
          class="govuk-label lbh-label govuk-label--m"
          for="completionDate"
        >
          Select completion date 
        </label>
        <span
          class="govuk-hint lbh-hint"
          id="completionDate-hint"
        >
          For example, 15/05/2021
        </span>
        <input
          class="govuk-input govuk-input--width-10"
          data-testid="completionDate"
          id="completionDate"
          name="completionDate"
          type="date"
          value="2021-01-12"
        />
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <fieldset
          aria-describedby="completionTime-hint"
          class="govuk-fieldset lbh-fieldset"
          role="group"
        >
          <legend
            class="govuk-fieldset__legend govuk-fieldset__legend--s"
          >
            Completion time 
          </legend>
          <span
            class="govuk-hint lbh-hint"
            id="completionTime-hint"
          >
            Use 24h format. For example, 14:30
          </span>
          <div
            class="govuk-date-input lbh-date-input"
            id="completionTime"
          >
            <div
              class="govuk-date-input__item"
            >
              <label
                class="govuk-label lbh-label govuk-date-input__label"
                for="completionTime-hour"
              >
                Hour
              </label>
              <input
                class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
                data-testid="completionTime-hour"
                id="completionTime-hour"
                inputmode="numeric"
                name="completionTime-hour"
                pattern="^\\\\d{1,2}$"
                type="text"
                value="14"
              />
            </div>
            <div
              class="govuk-date-input__item"
            >
              <label
                class="govuk-label lbh-label govuk-date-input__label"
                for="completionTime-minutes"
              >
                Minutes
              </label>
              <input
                class="govuk-input govuk-date-input__input govuk-input--width-2"
                data-testid="completionTime-minutes"
                id="completionTime-minutes"
                inputmode="numeric"
                name="completionTime-minutes"
                pattern="^\\\\d{1,2}$"
                type="text"
                value="30"
              />
            </div>
          </div>
        </fieldset>
      </div>
      <fieldset
        aria-describedby="completionTime-hint"
        class="govuk-fieldset lbh-fieldset"
        role="group"
      >
        <div
          class="operatives govuk-form-group"
        >
          <legend
            class="govuk-fieldset__legend govuk-fieldset__legend--s"
          >
            Operatives
          </legend>
          <span
            class="govuk-hint lbh-hint"
            id="completionTime-hint"
          >
            Search by operative name and select from the list
          </span>
          <div
            class="operatives-group"
          >
            <div
              class="govuk-form-group lbh-form-group operative-datalist"
              id="operative-0-form-group"
            >
              <label
                class="govuk-label lbh-label"
                for="operative-0"
              >
                Operative name 1 *  
              </label>
              <input
                autocomplete="off"
                class="govuk-select lbh-select govuk-!-width-full"
                data-testid="operative-0"
                id="operative-0"
                list="autocomplete-list-operative-0"
                name="operative-0"
                value="Operative A [1]"
              />
              <datalist
                id="autocomplete-list-operative-0"
              >
                <option
                  value="Operative A [1]"
                />
                <option
                  value="Operative B [2]"
                />
              </datalist>
            </div>
            <div
              class="select-percentage"
            >
              <div
                class="govuk-form-group lbh-form-group"
                id="percentage-0-form-group"
              >
                <label
                  class="govuk-label lbh-label"
                  for="percentage-0"
                >
                  Work done 
                </label>
                <select
                  class="govuk-select lbh-select undefined"
                  data-testid="percentage-0"
                  id="percentage-0"
                  name="percentage-0"
                >
                  <option
                    value=""
                  />
                  <option
                    value="100%"
                  >
                    100%
                  </option>
                  <option
                    value="90%"
                  >
                    90%
                  </option>
                  <option
                    value="80%"
                  >
                    80%
                  </option>
                  <option
                    value="70%"
                  >
                    70%
                  </option>
                  <option
                    value="60%"
                  >
                    60%
                  </option>
                  <option
                    value="50%"
                  >
                    50%
                  </option>
                  <option
                    value="40%"
                  >
                    40%
                  </option>
                  <option
                    value="30%"
                  >
                    30%
                  </option>
                  <option
                    value="20%"
                  >
                    20%
                  </option>
                  <option
                    value="10%"
                  >
                    10%
                  </option>
                  <option
                    value="-"
                  >
                    -
                  </option>
                </select>
              </div>
            </div>
            <div
              class="smv-read-only"
            >
              <p
                class="lbh-body smv-read-only--label"
              >
                SMV
              </p>
              <p
                class="lbh-body smv-read-only--value"
              >
                38
              </p>
            </div>
          </div>
          <div
            class="operatives-group"
          >
            <div
              class="govuk-form-group lbh-form-group operative-datalist"
              id="operative-1-form-group"
            >
              <label
                class="govuk-label lbh-label"
                for="operative-1"
              >
                Operative name 2 *  
              </label>
              <input
                autocomplete="off"
                class="govuk-select lbh-select govuk-!-width-full"
                data-testid="operative-1"
                id="operative-1"
                list="autocomplete-list-operative-1"
                name="operative-1"
                value="Operative B [2]"
              />
              <datalist
                id="autocomplete-list-operative-1"
              >
                <option
                  value="Operative A [1]"
                />
                <option
                  value="Operative B [2]"
                />
              </datalist>
            </div>
            <div
              class="select-percentage"
            >
              <div
                class="govuk-form-group lbh-form-group"
                id="percentage-1-form-group"
              >
                <label
                  class="govuk-label lbh-label"
                  for="percentage-1"
                >
                  Work done 
                </label>
                <select
                  class="govuk-select lbh-select undefined"
                  data-testid="percentage-1"
                  id="percentage-1"
                  name="percentage-1"
                >
                  <option
                    value=""
                  />
                  <option
                    value="100%"
                  >
                    100%
                  </option>
                  <option
                    value="90%"
                  >
                    90%
                  </option>
                  <option
                    value="80%"
                  >
                    80%
                  </option>
                  <option
                    value="70%"
                  >
                    70%
                  </option>
                  <option
                    value="60%"
                  >
                    60%
                  </option>
                  <option
                    value="50%"
                  >
                    50%
                  </option>
                  <option
                    value="40%"
                  >
                    40%
                  </option>
                  <option
                    value="30%"
                  >
                    30%
                  </option>
                  <option
                    value="20%"
                  >
                    20%
                  </option>
                  <option
                    value="10%"
                  >
                    10%
                  </option>
                  <option
                    value="-"
                  >
                    -
                  </option>
                </select>
              </div>
            </div>
            <div
              class="smv-read-only"
            >
              <p
                class="lbh-body smv-read-only--label"
              >
                SMV
              </p>
              <p
                class="lbh-body smv-read-only--value"
              >
                38
              </p>
            </div>
          </div>
          <div>
            <a
              class="lbh-link"
              href="#"
            >
              + Add operative
            </a>
          </div>
          <div>
            <a
              class="lbh-link"
              href="#"
            >
              - Remove last operative
            </a>
          </div>
        </div>
      </fieldset>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <legend
          class="govuk-fieldset__legend govuk-fieldset__legend--s"
        >
          Payment type 
        </legend>
        <span
          class="govuk-hint lbh-hint"
          id="paymentType-hint"
        />
        <div
          class="govuk-radios lbh-radios"
        >
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              data-testid="paymentType"
              id="paymentType_Bonus"
              name="paymentType"
              type="radio"
              value="Bonus"
            />
            <label
              class="govuk-label lbh-label govuk-radios__label"
              for="paymentType_Bonus"
            >
              Bonus calculation
            </label>
          </div>
          <div
            class="govuk-radios__item"
          >
            <input
              aria-describedby="paymentType-overtime-hint"
              checked=""
              class="govuk-radios__input"
              data-testid="paymentType"
              id="paymentType_Overtime"
              name="paymentType"
              type="radio"
              value="Overtime"
            />
            <label
              class="govuk-label lbh-label govuk-radios__label"
              for="paymentType_Overtime"
            >
              Overtime work order
            </label>
            <span
              class="govuk-hint govuk-radios__hint"
              id="paymentType-overtime-hint"
            >
              SMVs not included in Bonus
            </span>
          </div>
          <div
            class="govuk-radios__item"
          >
            <input
              aria-describedby="paymentType-closetobase-hint"
              class="govuk-radios__input"
              data-testid="paymentType"
              id="paymentType_CloseToBase"
              name="paymentType"
              type="radio"
              value="CloseToBase"
            />
            <label
              class="govuk-label lbh-label govuk-radios__label"
              for="paymentType_CloseToBase"
            >
              Close to base
            </label>
            <span
              class="govuk-hint govuk-radios__hint"
              id="paymentType-closetobase-hint"
            >
              Operative payment made
            </span>
          </div>
        </div>
      </div>
      <div
        class="govuk-form-group lbh-form-group"
        id="notes-form-group"
      >
        <label
          class="govuk-label lbh-label"
          for="notes"
        >
          Add notes
        </label>
        <textarea
          aria-describedby="notes-hint notes-error"
          class="govuk-textarea lbh-textarea"
          data-testid="notes"
          id="notes"
          name="notes"
          rows="4"
        >
          this is a note
        </textarea>
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <button
          class="govuk-button lbh-button"
          data-module="govuk-button"
          id="submit-work-order-close"
          type="submit"
        >
          Close work order
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`CloseWorkOrderForm component should render properly 1`] = `
<DocumentFragment>
  <div
    class="close-work-order-form"
  >
    <a
      class="govuk-back-link lbh-back-link govuk-!-display-none-print"
      role="button"
    >
      Back
    </a>
    <h1
      class="lbh-heading-h2"
    >
      Close work order: 10000012
    </h1>
    <form
      role="form"
    >
      <div
        class="govuk-form-group lbh-form-group"
      >
        <legend
          class="govuk-fieldset__legend govuk-fieldset__legend--s"
        >
          Reason for closing 
        </legend>
        <span
          class="govuk-hint lbh-hint"
          id="reason-hint"
        />
        <div
          class="govuk-radios lbh-radios"
        >
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              data-testid="reason"
              id="reason_Work Order Completed"
              name="reason"
              type="radio"
              value="Work Order Completed"
            />
            <label
              class="govuk-label lbh-label govuk-radios__label"
              for="reason_Work Order Completed"
            >
              Visit completed
            </label>
          </div>
          <div
            class="govuk-radios__conditional"
            id="conditional-contact"
          />
          <div
            class="govuk-radios__item"
          >
            <input
              checked=""
              class="govuk-radios__input"
              data-testid="reason"
              id="reason_No Access"
              name="reason"
              type="radio"
              value="No Access"
            />
            <label
              class="govuk-label lbh-label govuk-radios__label"
              for="reason_No Access"
            >
              No access
            </label>
          </div>
        </div>
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <div>
          <legend
            class="govuk-fieldset__legend govuk-fieldset__legend--s"
            id="fileUploadLegend"
          >
            Photos
          </legend>
          <span
            class="govuk-hint lbh-hint"
            id="photos-hint"
          >
            Select all the photos you want to add (up to 10 photos)
          </span>
          <input
            accept=".jpg, .jpeg, .png"
            aria-labelledby="fileUploadLegend"
            class="govuk-file-upload custom-file-input"
            data-testid="PhotoUploadForm"
            id="fileUpload"
            multiple=""
            name="fileUpload"
            style="margin-top: 10px;"
            type="file"
          />
          <div
            class="photoUploadPreview"
          />
        </div>
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <label
          class="govuk-label lbh-label govuk-label--m"
          for="startDate"
        >
          Select start date (optional) 
        </label>
        <span
          class="govuk-hint lbh-hint"
          id="startDate-hint"
        >
          For example, 15/05/2021
        </span>
        <input
          class="govuk-input govuk-input--width-10"
          data-testid="startDate"
          id="startDate"
          name="startDate"
          type="date"
          value="2021-01-12"
        />
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <fieldset
          aria-describedby="startTime-hint"
          class="govuk-fieldset lbh-fieldset"
          role="group"
        >
          <legend
            class="govuk-fieldset__legend govuk-fieldset__legend--s"
          >
            Start time (optional) 
          </legend>
          <span
            class="govuk-hint lbh-hint"
            id="startTime-hint"
          >
            Use 24h format. For example, 14:30
          </span>
          <div
            class="govuk-date-input lbh-date-input"
            id="startTime"
          >
            <div
              class="govuk-date-input__item"
            >
              <label
                class="govuk-label lbh-label govuk-date-input__label"
                for="startTime-hour"
              >
                Hour
              </label>
              <input
                class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
                data-testid="startTime-hour"
                id="startTime-hour"
                inputmode="numeric"
                name="startTime-hour"
                pattern="^\\\\d{1,2}$"
                type="text"
                value="14"
              />
            </div>
            <div
              class="govuk-date-input__item"
            >
              <label
                class="govuk-label lbh-label govuk-date-input__label"
                for="startTime-minutes"
              >
                Minutes
              </label>
              <input
                class="govuk-input govuk-date-input__input govuk-input--width-2"
                data-testid="startTime-minutes"
                id="startTime-minutes"
                inputmode="numeric"
                name="startTime-minutes"
                pattern="^\\\\d{1,2}$"
                type="text"
                value="30"
              />
            </div>
          </div>
        </fieldset>
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <label
          class="govuk-label lbh-label govuk-label--m"
          for="completionDate"
        >
          Select completion date 
        </label>
        <span
          class="govuk-hint lbh-hint"
          id="completionDate-hint"
        >
          For example, 15/05/2021
        </span>
        <input
          class="govuk-input govuk-input--width-10"
          data-testid="completionDate"
          id="completionDate"
          name="completionDate"
          type="date"
          value="2021-01-12"
        />
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <fieldset
          aria-describedby="completionTime-hint"
          class="govuk-fieldset lbh-fieldset"
          role="group"
        >
          <legend
            class="govuk-fieldset__legend govuk-fieldset__legend--s"
          >
            Completion time 
          </legend>
          <span
            class="govuk-hint lbh-hint"
            id="completionTime-hint"
          >
            Use 24h format. For example, 14:30
          </span>
          <div
            class="govuk-date-input lbh-date-input"
            id="completionTime"
          >
            <div
              class="govuk-date-input__item"
            >
              <label
                class="govuk-label lbh-label govuk-date-input__label"
                for="completionTime-hour"
              >
                Hour
              </label>
              <input
                class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
                data-testid="completionTime-hour"
                id="completionTime-hour"
                inputmode="numeric"
                name="completionTime-hour"
                pattern="^\\\\d{1,2}$"
                type="text"
                value="14"
              />
            </div>
            <div
              class="govuk-date-input__item"
            >
              <label
                class="govuk-label lbh-label govuk-date-input__label"
                for="completionTime-minutes"
              >
                Minutes
              </label>
              <input
                class="govuk-input govuk-date-input__input govuk-input--width-2"
                data-testid="completionTime-minutes"
                id="completionTime-minutes"
                inputmode="numeric"
                name="completionTime-minutes"
                pattern="^\\\\d{1,2}$"
                type="text"
                value="30"
              />
            </div>
          </div>
        </fieldset>
      </div>
      <fieldset
        aria-describedby="completionTime-hint"
        class="govuk-fieldset lbh-fieldset"
        role="group"
      >
        <div
          class="operatives govuk-form-group"
        >
          <legend
            class="govuk-fieldset__legend govuk-fieldset__legend--s"
          >
            Operatives
          </legend>
          <span
            class="govuk-hint lbh-hint"
            id="completionTime-hint"
          >
            Search by operative name and select from the list
          </span>
          <div
            class="operatives-group"
          >
            <div
              class="govuk-form-group lbh-form-group operative-datalist"
              id="operative-0-form-group"
            >
              <label
                class="govuk-label lbh-label"
                for="operative-0"
              >
                Operative name 1 *  
              </label>
              <input
                autocomplete="off"
                class="govuk-select lbh-select govuk-!-width-full"
                data-testid="operative-0"
                id="operative-0"
                list="autocomplete-list-operative-0"
                name="operative-0"
                value="Operative A [1]"
              />
              <datalist
                id="autocomplete-list-operative-0"
              >
                <option
                  value="Operative A [1]"
                />
                <option
                  value="Operative B [2]"
                />
              </datalist>
            </div>
            <div
              class="select-percentage"
            >
              <div
                class="govuk-form-group lbh-form-group"
                id="percentage-0-form-group"
              >
                <label
                  class="govuk-label lbh-label"
                  for="percentage-0"
                >
                  Work done 
                </label>
                <select
                  class="govuk-select lbh-select undefined"
                  data-testid="percentage-0"
                  id="percentage-0"
                  name="percentage-0"
                >
                  <option
                    value=""
                  />
                  <option
                    value="100%"
                  >
                    100%
                  </option>
                  <option
                    value="90%"
                  >
                    90%
                  </option>
                  <option
                    value="80%"
                  >
                    80%
                  </option>
                  <option
                    value="70%"
                  >
                    70%
                  </option>
                  <option
                    value="60%"
                  >
                    60%
                  </option>
                  <option
                    value="50%"
                  >
                    50%
                  </option>
                  <option
                    value="40%"
                  >
                    40%
                  </option>
                  <option
                    value="30%"
                  >
                    30%
                  </option>
                  <option
                    value="20%"
                  >
                    20%
                  </option>
                  <option
                    value="10%"
                  >
                    10%
                  </option>
                  <option
                    value="-"
                  >
                    -
                  </option>
                </select>
              </div>
            </div>
            <div
              class="smv-read-only"
            >
              <p
                class="lbh-body smv-read-only--label"
              >
                SMV
              </p>
              <p
                class="lbh-body smv-read-only--value"
              >
                38
              </p>
            </div>
          </div>
          <div
            class="operatives-group"
          >
            <div
              class="govuk-form-group lbh-form-group operative-datalist"
              id="operative-1-form-group"
            >
              <label
                class="govuk-label lbh-label"
                for="operative-1"
              >
                Operative name 2 *  
              </label>
              <input
                autocomplete="off"
                class="govuk-select lbh-select govuk-!-width-full"
                data-testid="operative-1"
                id="operative-1"
                list="autocomplete-list-operative-1"
                name="operative-1"
                value="Operative B [2]"
              />
              <datalist
                id="autocomplete-list-operative-1"
              >
                <option
                  value="Operative A [1]"
                />
                <option
                  value="Operative B [2]"
                />
              </datalist>
            </div>
            <div
              class="select-percentage"
            >
              <div
                class="govuk-form-group lbh-form-group"
                id="percentage-1-form-group"
              >
                <label
                  class="govuk-label lbh-label"
                  for="percentage-1"
                >
                  Work done 
                </label>
                <select
                  class="govuk-select lbh-select undefined"
                  data-testid="percentage-1"
                  id="percentage-1"
                  name="percentage-1"
                >
                  <option
                    value=""
                  />
                  <option
                    value="100%"
                  >
                    100%
                  </option>
                  <option
                    value="90%"
                  >
                    90%
                  </option>
                  <option
                    value="80%"
                  >
                    80%
                  </option>
                  <option
                    value="70%"
                  >
                    70%
                  </option>
                  <option
                    value="60%"
                  >
                    60%
                  </option>
                  <option
                    value="50%"
                  >
                    50%
                  </option>
                  <option
                    value="40%"
                  >
                    40%
                  </option>
                  <option
                    value="30%"
                  >
                    30%
                  </option>
                  <option
                    value="20%"
                  >
                    20%
                  </option>
                  <option
                    value="10%"
                  >
                    10%
                  </option>
                  <option
                    value="-"
                  >
                    -
                  </option>
                </select>
              </div>
            </div>
            <div
              class="smv-read-only"
            >
              <p
                class="lbh-body smv-read-only--label"
              >
                SMV
              </p>
              <p
                class="lbh-body smv-read-only--value"
              >
                38
              </p>
            </div>
          </div>
          <div>
            <a
              class="lbh-link"
              href="#"
            >
              + Add operative
            </a>
          </div>
          <div>
            <a
              class="lbh-link"
              href="#"
            >
              - Remove last operative
            </a>
          </div>
        </div>
      </fieldset>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <legend
          class="govuk-fieldset__legend govuk-fieldset__legend--s"
        >
          Payment type 
        </legend>
        <span
          class="govuk-hint lbh-hint"
          id="paymentType-hint"
        />
        <div
          class="govuk-radios lbh-radios"
        >
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              data-testid="paymentType"
              id="paymentType_Bonus"
              name="paymentType"
              type="radio"
              value="Bonus"
            />
            <label
              class="govuk-label lbh-label govuk-radios__label"
              for="paymentType_Bonus"
            >
              Bonus calculation
            </label>
          </div>
          <div
            class="govuk-radios__item"
          >
            <input
              aria-describedby="paymentType-overtime-hint"
              checked=""
              class="govuk-radios__input"
              data-testid="paymentType"
              id="paymentType_Overtime"
              name="paymentType"
              type="radio"
              value="Overtime"
            />
            <label
              class="govuk-label lbh-label govuk-radios__label"
              for="paymentType_Overtime"
            >
              Overtime work order
            </label>
            <span
              class="govuk-hint govuk-radios__hint"
              id="paymentType-overtime-hint"
            >
              SMVs not included in Bonus
            </span>
          </div>
          <div
            class="govuk-radios__item"
          >
            <input
              aria-describedby="paymentType-closetobase-hint"
              class="govuk-radios__input"
              data-testid="paymentType"
              id="paymentType_CloseToBase"
              name="paymentType"
              type="radio"
              value="CloseToBase"
            />
            <label
              class="govuk-label lbh-label govuk-radios__label"
              for="paymentType_CloseToBase"
            >
              Close to base
            </label>
            <span
              class="govuk-hint govuk-radios__hint"
              id="paymentType-closetobase-hint"
            >
              Operative payment made
            </span>
          </div>
        </div>
      </div>
      <div
        class="govuk-form-group lbh-form-group"
        id="notes-form-group"
      >
        <label
          class="govuk-label lbh-label"
          for="notes"
        >
          Add notes
        </label>
        <textarea
          aria-describedby="notes-hint notes-error"
          class="govuk-textarea lbh-textarea"
          data-testid="notes"
          id="notes"
          name="notes"
          rows="4"
        >
          this is a note
        </textarea>
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <button
          class="govuk-button lbh-button"
          data-module="govuk-button"
          id="submit-work-order-close"
          type="submit"
        >
          Close work order
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
